--- a/app/src/main/res/layout/activity_cone.xml
+++ b/app/src/main/res/layout/activity_cone.xml
@@ -1,26 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main"
+    android:id="@+id/activity_cone"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:orientation="vertical"
-    tools:context="com.maiml.openglesdemo.MainActivity">
-
-
-    <Button
-        android:text="shape"
-        android:id="@+id/shape"
+    tools:context="com.maiml.openglesdemo.ui.ConeActivity">
+    <android.opengl.GLSurfaceView
+        android:id="@+id/surface_view"
         android:layout_width="match_parent"
-        android:layout_height="40dp"/>
-    <Button
-        android:text="图片"
-        android:id="@+id/pic"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"/>
-</LinearLayout>
+        android:layout_height="match_parent" />
+</RelativeLayout>
