--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,4 +23,9 @@
         android:id="@+id/pic"
         android:layout_width="match_parent"
         android:layout_height="40dp"/>
+    <Button
+        android:text="图片处理filter"
+        android:id="@+id/filter"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"/>
 </LinearLayout>
