--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,5 +35,10 @@
         android:id="@+id/camera"
         android:layout_width="match_parent"
         android:layout_height="40dp"/>
+    <Button
+        android:text="FBO处理"
+        android:id="@+id/fbo"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"/>
 
 </LinearLayout>
