--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,4 +46,10 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"/>
 
+    <Button
+        android:text="audiorecord"
+        android:id="@+id/audiorecord"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"/>
+
 </LinearLayout>
