--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,4 +57,9 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"/>
 
+    <Button
+        android:text="video_play"
+        android:id="@+id/video_play"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"/>
 </LinearLayout>
