--- a/app/src/main/res/layout/activity_open_gl_play_video.xml
+++ b/app/src/main/res/layout/activity_open_gl_play_video.xml
@@ -14,4 +14,9 @@
         android:layout_height="match_parent" />
 
 
+    <Button
+        android:text="开始"
+        android:id="@+id/btn_start"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 </RelativeLayout>
